[package]
name = "bevy-game-jam"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
bevy = { version = "0.6.1", default_features = false, features = ["bevy_gilrs", "bevy_winit", "render", "png", "x11", "filesystem_watcher"] }
tiled = { version = "0.9.5", default_features = false }
heron = { version = "2.0.1", default-features = false, features = ["2d"] }
benimator = "2.1.0"
instant = "0.1.12"
rand = "0.8.5"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = "debuginfo"
lto = "fat"
